
Camlp5 Version 8.00-alpha07:
--------------------

* [18 Oct 2020] BIG change: the type of expressions (MLast.expr) is
  switched to using longidents instead of the old "ExAcc"/"ExUid"
  stuff.  This is a vast improvement in correctness as well as
  allowing better support for things like "M.N.( ... expr ...)"

  The old quotation syntax <:expr< $e1$ . $e2$ >> is discontinued.
  Instead you should use:

  <:expr< $longid:li$ >>:

  for a module-path or constructor

  <:expr< $longid:li$ . ( $e$ ) >>:

  for a local-open

  <:expr< $e$ . $longid:li$ . $lid:id$ >>:

  for a qualified field-name, e.g. x.Location.txt

  <:expr< $e$ . $lid:id$ >>:

  for a simple field-name, e.g. x.txt

Camlp5 Version 8.00-alpha06:
--------------------

* [01 Oct 2020] multiple small changes

  * export "pa_macro_gram.cmo" as the findlib package "camlp5.macro_gram": this provides IFDEF support in grammars.

  * in Q_ast, add "stri" as a valid antiquotation for str_item.  And add tests.

  * factored out base of Q_ast, so we can use it in PPX derivers that
    generate quotations for other types than Camlp5's AST

Camlp5 Version 8.00-alpha05:
--------------------

* [24 Sep 2020] add support for 4.11.0 quoted-extension, viz {%foo|argle|} and
  {foo bar|argle|bar}

* [19 Sep 2020] multiple small changes

  * export more names from Reloc

  * in Q_MLast, allow Qast.Node to take a dotted name, e.g. Qast.Node
    "A.B.C" and convert it into an access-expression, so we can use
    quotations over types not in MLast.

Camlp5 Version 8.00-alpha04:
--------------------

* [01 Sep 2020] Add support for Ocaml 4.11.1.

  Support "#-types" with extended longidents (module-applications).  Test support for same.

Camlp5 Version 8.00-alpha03:
--------------------

* [22 Aug 2020] Add support for Ocaml 4.10.1.

Camlp5 Version 8.00-alpha02:
--------------------

* [18 Aug 2020] fixed original-syntax pretty-printing bug in class-decl params.
