@@ -7,7 +7,7 @@
 
 open Printf;
 
-value version = "8.00-alpha07";
+value version = "8.00";
 value syntax_name = ref "";
 
 value ocaml_version =
