@@ -37,10 +37,10 @@ depends: [
 ]
 build: [
   ["./configure" "--prefix" prefix "-libdir" lib "-mandir" man]
-  [make -j%{jobs}% "DEBUG=-g" "world.opt"]
-  [make -j%{jobs}% "DEBUG=-g" "all"]
-#  [make "-C" "testsuite" "clean" "all-tests"] { with-test & ocaml:version >= "4.10.0" }
-#  [make "-C" "test" "clean" "all"] {with-test & ocaml:version >= "4.10.0" }
+  [make "-j%{jobs}%" "DEBUG=-g" "world.opt"]
+  [make "-j%{jobs}%" "DEBUG=-g" "all"]
+  [make "-C" "testsuite" "clean" "all-tests"] { with-test & ocaml:version >= "4.10.0" }
+  [make "-C" "test" "clean" "all"] {with-test & ocaml:version >= "4.10.0" }
 ]
 install: [make "install"]
 depexts: [
