@@ -6,6 +6,7 @@ for v in \
     4.12.0~alpha3 \
     4.11.1 \
     4.11.0 \
+    4.10.2 \
     4.10.1 \
     4.10.0 \
     4.09.0 \
